GNOME Bugzilla – Bug 674100
gdp segfault in 0.11
Last modified: 2012-04-16 13:56:46 UTC
gdp data protocol doesn't work anymore in 0.11 this pipeline, that works fine in 0.10, now segfault: gst-launch videotestsrc ! gdppay ! gdpdepay ! fakesink Program received signal SIGSEGV, Segmentation fault.
+ Trace 230063
Thread 140737300510464 (LWP 18456)
commit d3428719077efe0a201b86cf64b3411d0493ea6d Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Mon Apr 16 15:35:23 2012 +0200 segment: add rude serialization Ass serialize and deserialize functions for GstSegment so that gdp and gst_structure_to_string show the segment values. We convert to a GstSegment first to make things easier..